[project]
name = "autoresearch"
version = "0.2.0"
description = "Autonomous pretraining research swarm + AutoFinetune"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "kernels>=0.11.7",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "requests>=2.32.0",
    "rustbpe>=0.1.0",
    "tiktoken>=0.11.0",
    "torch==2.9.1",
    # AutoFinetune dependencies
    "transformers>=4.46.0",
    "peft>=0.13.0",
    "trl>=0.12.0",
    "accelerate>=1.0.0",
    "bitsandbytes>=0.44.0",
    "datasets>=3.0.0",
    "lm-eval>=0.4.6",
    "evalplus>=0.3.0",
    "optuna>=4.0.0",
    "sentencepiece>=0.2.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
